Header responsivity and x overflow issues resolved

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden !important;
+}
+
 body {
         margin-right:auto;
         margin-left:auto;
@@ -87,6 +91,19 @@ body {
     box-shadow: 5px 5px 15px #bebebe, -5px -5px 15px #ffffff !important;
     padding: 0.75rem 1.5rem !important;
     transition: box-shadow 0.2s ease !important;
+}
+
+.neumorphic-button-nav {
+  background: #e0e0e0 !important;
+  border-radius: 30px !important;
+  box-shadow: 5px 5px 15px #bebebe, -5px -5px 15px #ffffff !important;
+  padding: 0.5rem 1rem !important;
+  transition: box-shadow 0.2s ease !important;
+}
+@media (min-width: 320px){
+  .neumorphic-button-nav {
+    padding: 0.75rem 1.5rem !important;
+  }
 }
 
 .neumorphic-button:hover {
